tests/compiler_errors/enum_unclosed.tlp
enum foo bar baz bat